infrastructure/production/traefik/config/externalServices.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
spec:
  ClusterIP: None
  ports:
    - name: homeassistant
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant-service
  namespace: homeassistant
subsets:
  - addresses:
      - ip: 192.168.178.44
    ports:
      - name: homeassistant
        port: 8123
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingress
  namespace: homeassistant
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`james.vandelocht.uk`)
      kind: Rule
      services:
        - name: homeassistant-service
          kind: Service
          namespace: homeassistant
          port: 8123
  tls:
    secretName: james-vandelocht-uk-production-tls
